Closed Bug 230429 Opened 20 years ago Closed 20 years ago

Progress broken in progress window when saving / opening attachments

Categories

(MailNews Core :: Networking, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.7alpha

People

(Reporter: mscott, Assigned: mscott)

References

Details

Attachments

(1 file)

Open or save a large attachment that brings up the external helper app's
progress dialog.

Note that the progress bar is defunct and never increases.

This is because of the following code used to update the progress dialog:

http://lxr.mozilla.org/mozilla/source/uriloader/exthandler/nsExternalHelperAppService.cpp#1635

We never set the ContentLength field for any of the mail protocols.

I don't understand the code in question anymore since we are correctly
broadcasting progress totals through the web progress interface via the
docloader just fine. I don't understand why that does not work for the progress
dialog.

In any case, small patch coming up for imap. Need another one for nsMsgProtocol.
Attached patch fix for imapSplinter Review
I think this is relatively safe because we use a new mock channel for each new
imap request. We aren't effecting anything on the persistent imap channel.
Comment on attachment 138643 [details] [diff] [review]
fix for imap

Looks like this already works today for mailbox urls. I see that
nsMailboxProtocol::GetContentLength has a valid definition.
Attachment #138643 - Flags: superreview?(bienvenu)
Comment on attachment 138643 [details] [diff] [review]
fix for imap

I'm happy to try running with this - sorry for the delay - I just got the
bugmail this morning.
Attachment #138643 - Flags: superreview?(bienvenu) → superreview+
fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.7alpha
Blocks: 230700
checked into the M4 branch.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.