Bug #230429 -->  Progressmeter broken in progress dialog when saving / opening imap attachments.

sr=bienvenu